# Agent_Engineering_SRHG

./: README.md
00_AE_Quicklinks/: README.md
00_Docs/: README.md
00_Docs/Modules/03_The_Agent_Loop/: README.md
00_Docs/Modules/12_MCP/: README.md
00_Docs/Modules/13_Agent_Servers/: README.md
00_Docs/Modules/14_Guardrails_Caching/: README.md
01_Vibe_Check/: README.md
02_Dense_Vector_Retrieval/: Pythonic_RAG_Assignment.ipynb  README.md
02_Dense_Vector_Retrieval/aimakerspace/: __init__.py  vectordatabase.py
03_The_Agent_Loop/: The_Agent_Loop_Assignment.ipynb  pyproject.toml
03_The_Agent_Loop/aimakerspace/: text_utils.py
04_Agentic_RAG_From_Scratch/: Agentic_RAG_From_Scratch_Assignment.ipynb  pyproject.toml
05_Multi_Agent_with_LangGraph/: Multi_Agent_Applications_Assignment.ipynb
06_Agent_Memory/: Agent_Memory_Assignment.ipynb
07_Synthetic_Data_and_Evaluation/: Evaluating_Agents_Assignment.ipynb  Synthetic_Data_Generation_and_RAG_Evaluation_Assignment.ipynb  pyproject.toml
08_Advanced_Retrieval_and_Deep_Research/: 01_Advanced_Retrieval_Assignment.ipynb  pyproject.toml
