[project]
name = "07-synthetic-data-and-evaluation"
version = "0.1.0"
description = "Synthetic Data Generation and RAG/Agent Evaluation with Ragas"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "python-dotenv>=1.0.1",
    "jupyter>=1.1.1",
    "ipykernel>=6.30.1",
    "langchain>=1.0.0",
    "langchain-graph-retriever>=0.8.0",
     "langchain-classic",
    "langchain-openai",
    "langchain-qdrant",
    "langchain-text-splitters>=1.1.0",
    "langchain-cohere",
    "langgraph",
    "ragas==0.2.10",
    "cohere",
    "qdrant-client",
    "nltk==3.8.1",
    "numpy>=2.2.2",
    "rapidfuzz>=3.0.0",
    "pymupdf",
    "langchain-community",
]
